[tool.poetry]
name = "python-driver-docs"
version = "0.1.0"
description = "ScyllaDB Python Driver Docs"
authors = ["Python Driver Contributors"]
package-mode = false

[tool.poetry.dependencies]
eventlet = "^0.40.3"
futures = "3.4.0"
gevent = "^25.9.1"
gremlinpython = "3.7.4"
python = "^3.13"
pygments = "^2.19.2"
recommonmark = "0.7.1"
redirects_cli = "~0.1.3"
sphinx-autobuild = "^2025.0.0"
sphinx-sitemap = "^2.8.0"
sphinx-scylladb-theme = "^1.8.2"
sphinx-multiversion-scylla = "^0.3.2"
Sphinx = "^8.2.3"
scales = "^1.0.9"
six = ">=1.9"
tornado = ">=4.0,<5.0"
scylla-driver = { path = "../", develop = true }


[build-system]
requires = ["poetry>=1.8.0"]
build-backend = "poetry.masonry.api"
